--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -6,73 +6,77 @@ screen:
   height: 1080
   backgroundColor: "#000000"
 
-presets:
-  bj342s:
-    name: Read
-    eventsMap:
-      LeftClick:
-        systemActions:
-          nextLine: {}
-
 resources:
-    ui:
   layouts:
+    storyScreenLayout:
+      name: Story Screen Background
+      elements:
+        - id: story-screen-bg
+          type: rect
+          x: 0
+          y: 0
+          width: 1920
+          height: 1080
+          fill: "#000000"
+          clickEventName: "system"
+          clickEventPayload:
+            system:
+              nextLine: {}
     fi3l:
-    name: Choices
-    elements:
-      - type: "container"
-        x: 100
-        y: 100
-        direction: vertical
-        children:
-          - $when: choice.items[0]
-            type: container
-            x: 0
-            y: 0
-            height: 40
-            children:
-              - type: text
-                text: "${choice.items[0].content}"
-                style:
-                  fontSize: 24
-                  fill: "white"
-          - $when: choice.items[1]
-            type: container
-            x: 0
-            y: 0
-            height: 40
-            children:
-              - type: text
-                text: "${choice.items[1].content}"
-                style:
-                  fontSize: 24
-                  fill: "white"
-          - $when: choice.items[2]
-            type: container
-            x: 0
-            y: 0
-            height: 40
-            children:
-              - type: text
-                text: "${choice.items[2].content}"
-                style:
-                  fontSize: 24
-                  fill: "white"
-          - $when: choice.items[3]
-            type: container
-            x: 0
-            y: 0
-            height: 40
-            children:
-              - type: text
-                text: "${choice.items[3].content}"
-                style:
-                  fontSize: 24
-                  fill: "white"
+      name: Choices
+      elements:
+        - type: "container"
+          x: 100
+          y: 100
+          direction: vertical
+          children:
+            - $when: choice.items[0]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[0].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[1]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[1].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[2]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[2].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
+            - $when: choice.items[3]
+              type: container
+              x: 0
+              y: 0
+              height: 40
+              children:
+                - type: text
+                  text: "${choice.items[3].content}"
+                  style:
+                    fontSize: 24
+                    fill: "white"
 
 story:
   initialSceneId: ajfl3a
-  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -83,6 +87,9 @@ story:
           lines:
             - id: line1
               presentation:
+                screen:
+                  resourceId: storyScreenLayout
+                  resourceType: layout
                 choice:
                   layoutId: fi3l
                   items:
