--- a/vt/specs/dialogue/with-background.yaml
+++ b/vt/specs/dialogue/with-background.yaml
@@ -6,16 +6,22 @@ screen:
   height: 1080
   backgroundColor: "#cccccc"
 
-presets:
-  bj342s:
-    name: Read
-    eventsMap:
-      LeftClick:
-        systemActions:
-          nextLine: {}
-
 resources:
   layouts:
+    storyScreenLayout:
+      name: Story Screen Background
+      elements:
+        - id: story-screen-bg
+          type: rect
+          x: 0
+          y: 0
+          width: 1920
+          height: 1080
+          fill: "#000000"
+          clickEventName: "system"
+          clickEventPayload:
+            system:
+              nextLine: {}
     fi3l:
       name: Dialogue Screen
       elements:
@@ -68,7 +74,6 @@ resources:
 
 story:
   initialSceneId: ajfl3a
-  initialPresetId: bj342s
   scenes:
     ajfl3a:
       name: Scene 1
@@ -79,6 +84,9 @@ story:
           lines:
             - id: line1
               presentation:
+                screen:
+                  resourceId: storyScreenLayout
+                  resourceType: layout
                 dialogue:
                   layoutId: fi3l
                   content: Hello! Welcome to this visual novel.
